--- a/src/views/cartId.handlebars
+++ b/src/views/cartId.handlebars
@@ -17,6 +17,6 @@
     <div class="cart-summary">
         <h2>cart summary</h2>
         <p>Total:${{total}}</p>
-        <button class="checkout-button">Checkout</button>
+        <button class="checkout-button" id="btn-checkout">Checkout</button>
     </div>
 </div>
