--- a/src/views/cartId.handlebars
+++ b/src/views/cartId.handlebars
@@ -18,5 +18,6 @@
         <h2>cart summary</h2>
         <p>Total:${{total}}</p>
         <button class="checkout-button" id="btn-checkout">Checkout</button>
+        <button class="checkout-button" id="btn-checkout">Purchases</button>
     </div>
 </div>
