--- a/src/views/cartId.handlebars
+++ b/src/views/cartId.handlebars
@@ -18,6 +18,7 @@
         <h2>cart summary</h2>
         <p>Total:${{total}}</p>
         <button class="checkout-button" id="btn-checkout">Checkout</button>
-        <button class="checkout-button" id="btn-checkout">Purchases</button>
+        <a href="/purchases" style="text-decoration:none;"><button class="checkout-button"
+                id="btn-purchase">Purchases</button></a>
     </div>
 </div>
