--- a/src/views/send_email_reset_pwd.handlebars
+++ b/src/views/send_email_reset_pwd.handlebars
@@ -155,37 +155,15 @@
 
     {{!-- Main --}}
     <main class="form-signin w-100 m-auto">
-        <form action="/api/sessions/login" method="post" enctype="application/x-www-form-urlencoded">
-            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+        <form action="/api/sessions/sendEmailResetPassword" method="post" enctype="application/x-www-form-urlencoded">
+            <h1 class="h3 mb-3 fw-normal">Please enter your email address</h1>
+            <p>We will send you a code to recover your password.</p>
             <div class="form-floating">
                 <input type="email" class="form-control" name="email" id="_email" placeholder="name@example.com">
                 <label for="_email">Email address</label>
             </div>
-            <div class="form-floating">
-                <input type="password" class="form-control" name="password" id="_pass" placeholder="Password">
-                <label for="_pass">Password</label>
-            </div>
-
-            {{!-- <div class="form-check text-start my-3">
-                <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                    Remember me
-                </label>
-            </div> --}}
-
-            <button class="btn btn-primary w-100 py-2 my-2" type="submit">Login</button>
-            <div style="text-align:center;">
-                <p>Forgot your password? <a href="/sendEmailToReset" role="button"> Reset Password</a></p>
-
-            </div>
+            <button class="btn btn-primary w-100 py-2 my-2" type="submit">Reset password</button>
         </form>
-
-        <hr class="border border-light border-1 opacity-0.5">
-        <a class="btn btn-primary w-100 py-2 my-2" href="/register" role="button">Register</a>
-        <a class="btn btn-primary w-100 py-2 my-2" href="/api/sessions/github" role="button">Login with GitHub</a>
-
-
-
     </main>
     <script src="/assets/dist/js/bootstrap.bundle.min.js"></script>
 </body>
