--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -7,9 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         {{#each styles}}
-
-        <link rel="stylesheet" href="/css/{{this}}">
-        
+            <link rel="stylesheet" href="/css/{{this}}">
         {{/each}}
 
         <title>{{title}}</title>
@@ -19,9 +17,20 @@
         {{{body}}}
 
         {{#each scripts}}
-
-        <script src="/js/{{this}}"></script>
-
+            <script src="/js/{{this}}"></script>
         {{/each}}
+
+        
+        {{#if useJquery}}
+            <script
+                src="https://code.jquery.com/jquery-3.7.1.min.js" 
+                integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" 
+                crossorigin="anonymous"
+            ></script> 
+        {{/if}}
+
+        {{#if useSweetAlert}}
+            <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        {{/if}}
     </body>
 </html>
