--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,16 +1,11 @@
 <header class="navbar">
     <ul class="nav-links">
-        <li><a href="#">Menu Secundario</a></li>
-
-        <img src="#" alt="logo ecommerce" >
+        <li><a href="#"></a></li>
     </ul>
-    
+
     <ul class="nav-links">
-        <li><a href="#">Logo</a></li>
-
-        <li><a href="#">About</a></li>
-
-        <li><a href="#">Contact</a></li>
+        <li><a href="/">Home</a></li>
+        {{!-- <img src="#" alt="logo ecommerce" > --}}
     </ul>
 </header>
 
