--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -6,11 +6,13 @@
     </ul>
     
     <ul class="nav-links">
-        <li><a href="#">Home</a></li>
+        <li><a href="#">LogIn</a></li>
 
-        <li><a href="#">About</a></li>
-
-        <li><a href="#">Contact</a></li>
+        {{#if isLoggedIn}}
+            <li><a href="#">Cart</a></li>
+            
+            <li><a href="#">Profile</a></li>
+        {{/if}}
     </ul>
 </header>
 
